--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.jvmargs=-Xmx4G
 	loader_version=0.14.9
 
 # Mod Properties
-	mod_version = 1.7.0
+	mod_version = 1.7.0+civ
 	maven_group = com.github.apace100
 	archives_base_name = Origins-1.19.2
 
